--- a/css/style.css
+++ b/css/style.css
@@ -127,7 +127,7 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 15px;
   opacity: 0;
   transform: translateY(20px);
-  transition: transform 1s, opacity 0.9s;
+  transition: transform 1s .4s, opacity 0.9s .4s;
 }
 
 .preloaderText.active {
